syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "EngineerNotebook.GrpcContracts.Documents";

package documents;

// The greeting service definition.
service Documents {
  rpc GetById(IdRequest) returns (DocDto);
  rpc Delete(IdRequest) returns (DeleteResponse);
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Update(UpdateRequest) returns (DocDto);
  rpc GetList(EMPTY) returns (stream DocDto);
}

message EMPTY{}

// The request message containing the user's name.
message CreateRequest {
  string title = 1;
  string description = 2;
  string contents = 3;
  repeated string tagIds = 4;
}

message UpdateRequest {
	string id = 1;
	string title = 2;
	string description = 3;
	string contents = 4;
	repeated string tagIds = 5;
}

message IdRequest {
	string id = 1;
}

message DocDto {
	string id = 1;
	string title = 2;
	string description = 3;
	string contents = 4;
	google.protobuf.Timestamp createdAt = 5;
	google.protobuf.Timestamp editedAt = 6;
	string createdByUserId = 7;
	string editedByUserId = 8;
	repeated string tagIds = 9;
}

message CreateResponse {
	DocDto result = 1;
	bool success = 2;
	repeated string messages = 3;
}

message DeleteResponse { 
	string status = 1;
}